# VoxelLearningPath

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
00_ConsoleHelloWorld/: CMakeLists.txt  README.md  main.cpp
00_ConsoleHelloWorld/include/: hello_utils.hpp
00_ConsoleHelloWorld/src/: hello_utils.cpp
01_ConsoleLoopsFunctions/: CMakeLists.txt  README.md  main.cpp
02_ConsoleTinyTextGame/: CMakeLists.txt  README.md  main.cpp
03_DrawWindow2D_SFML/: CMakeLists.txt  README.md  main.cpp
04_InputMovement2D/: CMakeLists.txt  README.md  main.cpp
05_AnimationDeltaTime/: CMakeLists.txt  README.md  main.cpp
06_2DPhysicsBounce/: CMakeLists.txt  README.md  main.cpp
07_2DCollisionResolution/: CMakeLists.txt  README.md  main.cpp
08_3DWindow_GLFW_OpenGL/: CMakeLists.txt  README.md  main.cpp
09_FirstCubeWithMatrices/: CMakeLists.txt  README.md  main.cpp
10_CameraWASD_MouseLook/: CMakeLists.txt  README.md  main.cpp
11_TexturedCube/: CMakeLists.txt  README.md  main.cpp
12_VoxelBasics_ChunkData/: CMakeLists.txt  README.md  main.cpp
13_VoxelMeshing_FaceCulling/: CMakeLists.txt  README.md  main.cpp
14_VoxelMeshing_Greedy/: CMakeLists.txt  README.md  main.cpp
15_Terrain_Noise/: CMakeLists.txt  README.md  main.cpp
16_ChunksStreaming/: CMakeLists.txt  README.md  main.cpp
17_Lighting_AO/: CMakeLists.txt  README.md  main.cpp
18_SaveLoad_World/: CMakeLists.txt  README.md  main.cpp
scripts/: run_tests.ps1  run_tests_macos.sh  setup.ps1  setup_macos.sh
tests/: CMakeLists.txt  README.md  test_00_console_basics.cpp  test_00_hello.cpp  test_02_text_game.cpp  test_04_2d_movement.cpp  test_06_physics.cpp  test_08_opengl_setup.cpp  test_10_camera.cpp  test_11_textures.cpp  test_12_voxel_indexing.cpp  test_13_14_meshing.cpp  test_15_noise_terrain.cpp  test_16_streaming.cpp  test_17_ao.cpp  test_18_save_load.cpp
